# asciibar

./: Cargo.toml  LICENSE.md  README.md
src/: barchart.rs  config.rs  main.rs  percentage.rs
tests/: tests.rs
